--- a/pages/anamnese médica.html
+++ b/pages/anamnese médica.html
@@ -118,63 +118,65 @@
                         <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                             <li class="nav-item">
                                 <a class="nav-link" aria-current="page" href="#">TELA DE INÍCIO</a>
-                                <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                                        aria-expanded="false">
-                                        CATEGORIAS
-                                    </a>
-                                    <ul class="dropdown-menu dropdown-menu-dark">
-                                        <li><a class="dropdown-item" href="#">TIPO DE OCORRÊNCIA</a></li>
-                                        <li>
-                                            <hr class="dropdown-divider">
-                                        </li>
-                                        <li><a class="dropdown-item" href="#" style="white-space: break-spaces;">PROBLEMAS ENCONTRADOS SUSPEITOS</a></li>
-                                        <li>
-                                            <hr class="dropdown-divider">
-                                        </li>
-                                        <li><a class="dropdown-item" href="#">SINAIS E SINTOMAS</a></li>
-                                        <li>
-                                            <hr class="dropdown-divider">
-                                        </li>
-                                        <li><a class="dropdown-item" href="#">AVALIAÇÃO DO PACIENTE (GLASGOW)</a></li>
-                                        <li>
-                                            <hr class="dropdown-divider">
-                                        </li>
-                                        <li><a class="dropdown-item" href="#">LOCALIZAÇÃO DOS TRAUMAS</a></li>
-                                        <li>
-                                            <hr class="dropdown-divider">
-                                        </li>
-                                        <li><a class="dropdown-item" href="#">SINAIS VITAIS</a></li>
-                                        <li>
-                                            <hr class="dropdown-divider">
-                                        </li>
-                                        <li><a class="dropdown-item" href="#">OBJETOS RECOLHIDOS</a></li>
-                                        <li>
-                                            <hr class="dropdown-divider">
-                                        </li>
-                                        <li><a class="dropdown-item" href="#" style="white-space: break-spaces;">FORMA DE CONDUÇÃO E DECISÃO DE TRANSPORTE</a></li>
-                                        <li>
-                                            <hr class="dropdown-divider">
-                                        </li>
-                                        <li><a class="dropdown-item" href="#">VÍTIMA ERA</a></li>
-                                        <li>
-                                            <hr class="dropdown-divider">
-                                        </li>
-                                        <li><a class="dropdown-item" href="#">PROCEDIMENTOS EFETUADOS</a></li>
-                                        <li>
-                                            <hr class="dropdown-divider">
-                                        </li>
-                                        <li><a class="dropdown-item" href="#">MATERIAIS UTILIZADOS</a></li>
-                                        <li>
-                                            <hr class="dropdown-divider">
-                                        </li>
-                                        <li><a class="dropdown-item" href="#">OBSERVAÇÕES IMPORTANTES</a></li>
-                                        <li>
-                                            <hr class="dropdown-divider">
-                                        </li>
-                                        <li><a class="dropdown-item" href="#">AVALIAÇÃO DA CINEMÁTICA</a></li>
-                                    </ul>
-                                </li>
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                                    aria-expanded="false">
+                                    CATEGORIAS
+                                </a>
+                                <ul class="dropdown-menu dropdown-menu-dark">
+                                    <li><a class="dropdown-item" href="#">TIPO DE OCORRÊNCIA</a></li>
+                                    <li>
+                                        <hr class="dropdown-divider">
+                                    </li>
+                                    <li><a class="dropdown-item" href="#" style="white-space: break-spaces;">PROBLEMAS
+                                            ENCONTRADOS SUSPEITOS</a></li>
+                                    <li>
+                                        <hr class="dropdown-divider">
+                                    </li>
+                                    <li><a class="dropdown-item" href="#">SINAIS E SINTOMAS</a></li>
+                                    <li>
+                                        <hr class="dropdown-divider">
+                                    </li>
+                                    <li><a class="dropdown-item" href="#">AVALIAÇÃO DO PACIENTE (GLASGOW)</a></li>
+                                    <li>
+                                        <hr class="dropdown-divider">
+                                    </li>
+                                    <li><a class="dropdown-item" href="#">LOCALIZAÇÃO DOS TRAUMAS</a></li>
+                                    <li>
+                                        <hr class="dropdown-divider">
+                                    </li>
+                                    <li><a class="dropdown-item" href="#">SINAIS VITAIS</a></li>
+                                    <li>
+                                        <hr class="dropdown-divider">
+                                    </li>
+                                    <li><a class="dropdown-item" href="#">OBJETOS RECOLHIDOS</a></li>
+                                    <li>
+                                        <hr class="dropdown-divider">
+                                    </li>
+                                    <li><a class="dropdown-item" href="#" style="white-space: break-spaces;">FORMA DE
+                                            CONDUÇÃO E DECISÃO DE TRANSPORTE</a></li>
+                                    <li>
+                                        <hr class="dropdown-divider">
+                                    </li>
+                                    <li><a class="dropdown-item" href="#">VÍTIMA ERA</a></li>
+                                    <li>
+                                        <hr class="dropdown-divider">
+                                    </li>
+                                    <li><a class="dropdown-item" href="#">PROCEDIMENTOS EFETUADOS</a></li>
+                                    <li>
+                                        <hr class="dropdown-divider">
+                                    </li>
+                                    <li><a class="dropdown-item" href="#">MATERIAIS UTILIZADOS</a></li>
+                                    <li>
+                                        <hr class="dropdown-divider">
+                                    </li>
+                                    <li><a class="dropdown-item" href="#">OBSERVAÇÕES IMPORTANTES</a></li>
+                                    <li>
+                                        <hr class="dropdown-divider">
+                                    </li>
+                                    <li><a class="dropdown-item" href="#">AVALIAÇÃO DA CINEMÁTICA</a></li>
+                                </ul>
+                            </li>
                             <li class="nav-item" style="list-style-type: none">
                                 <a class="nav-link" href="#">PERFIL</a>
                             </li>
@@ -288,7 +290,7 @@
                             <div class="container d-flex p-0">
                                 <label class="text mb-0 p-0" style="margin-top: 16px;">HORÁRIO DA ÚLTIMA
                                     MEDICAÇÃO</label>
-                                <input type="text" class="text-line-personality ms-3">
+                                <input type="text" class="text-line-personality ms-3" id="timeInput1">
                             </div>
                         </div>
 
@@ -342,7 +344,7 @@
 
                             <div class="container d-flex p-0">
                                 <label class="text mb-0 p-0" style="margin-top: 16px;">QUE HORAS?</label>
-                                <input type="text" class="text-line-personality ms-3">
+                                <input type="text" class="text-line-personality ms-3" id="timeInput">
                             </div>
                         </div>
                     </div>
@@ -359,6 +361,70 @@
         </div>
 
     </div>
+
+    <script>
+        document.getElementById('timeInput').addEventListener('input', function (e) {
+            // Obtém o valor atual do campo de texto
+            var value = e.target.value;
+
+            // Remove caracteres não numéricos
+            value = value.replace(/\D/g, '');
+
+            // Adiciona dois pontos entre as horas e os minutos
+            if (value.length > 2) {
+                value = value.slice(0, 2) + ':' + value.slice(2);
+            }
+
+            // Verifica se a hora é válida (0-23)
+            var hour = parseInt(value.slice(0, 2));
+            if (hour > 23) {
+                value = '23' + value.slice(2);
+            }
+
+            // Verifica se os minutos são válidos (0-59)
+            if (value.length > 2) {
+                var minutes = parseInt(value.slice(3));
+                if (minutes > 59) {
+                    value = value.slice(0, 3) + '59';
+                }
+            }
+
+            // Atualiza o valor do campo de texto
+            e.target.value = value;
+        });
+    </script>
+
+<script>
+    document.getElementById('timeInput1').addEventListener('input', function (e) {
+        // Obtém o valor atual do campo de texto
+        var value = e.target.value;
+
+        // Remove caracteres não numéricos
+        value = value.replace(/\D/g, '');
+
+        // Adiciona dois pontos entre as horas e os minutos
+        if (value.length > 2) {
+            value = value.slice(0, 2) + ':' + value.slice(2);
+        }
+
+        // Verifica se a hora é válida (0-23)
+        var hour = parseInt(value.slice(0, 2));
+        if (hour > 23) {
+            value = '23' + value.slice(2);
+        }
+
+        // Verifica se os minutos são válidos (0-59)
+        if (value.length > 2) {
+            var minutes = parseInt(value.slice(3));
+            if (minutes > 59) {
+                value = value.slice(0, 3) + '59';
+            }
+        }
+
+        // Atualiza o valor do campo de texto
+        e.target.value = value;
+    });
+</script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
