--- a/pages/gestacional.html
+++ b/pages/gestacional.html
@@ -103,7 +103,8 @@
                                     <li>
                                         <hr class="dropdown-divider">
                                     </li>
-                                    <li><a class="dropdown-item" href="#" style="white-space: break-spaces;">PROBLEMAS ENCONTRADOS SUSPEITOS</a></li>
+                                    <li><a class="dropdown-item" href="#" style="white-space: break-spaces;">PROBLEMAS
+                                            ENCONTRADOS SUSPEITOS</a></li>
                                     <li>
                                         <hr class="dropdown-divider">
                                     </li>
@@ -127,7 +128,8 @@
                                     <li>
                                         <hr class="dropdown-divider">
                                     </li>
-                                    <li><a class="dropdown-item" href="#" style="white-space: break-spaces;">FORMA DE CONDUÇÃO E DECISÃO DE TRANSPORTE</a></li>
+                                    <li><a class="dropdown-item" href="#" style="white-space: break-spaces;">FORMA DE
+                                            CONDUÇÃO E DECISÃO DE TRANSPORTE</a></li>
                                     <li>
                                         <hr class="dropdown-divider">
                                     </li>
@@ -354,7 +356,7 @@
                             </div>
                             <br>
                             <label class="card-text">HORA DO NASCIMENTO:</label>
-                            <input type="text" class="text-line">
+                            <input type="text" class="text-line" id="timeInput">
                         </div>
 
                         <div class="card col-9 mt-4 d-flex flex-column justify-content-center p-3">
@@ -387,6 +389,39 @@
         </form>
     </div>
     </div>
+
+    <script>
+        document.getElementById('timeInput').addEventListener('input', function (e) {
+            // Obtém o valor atual do campo de texto
+            var value = e.target.value;
+
+            // Remove caracteres não numéricos
+            value = value.replace(/\D/g, '');
+
+            // Adiciona dois pontos entre as horas e os minutos
+            if (value.length > 2) {
+                value = value.slice(0, 2) + ':' + value.slice(2);
+            }
+
+            // Verifica se a hora é válida (0-23)
+            var hour = parseInt(value.slice(0, 2));
+            if (hour > 23) {
+                value = '23' + value.slice(2);
+            }
+
+            // Verifica se os minutos são válidos (0-59)
+            if (value.length > 2) {
+                var minutes = parseInt(value.slice(3));
+                if (minutes > 59) {
+                    value = value.slice(0, 3) + '59';
+                }
+            }
+
+            // Atualiza o valor do campo de texto
+            e.target.value = value;
+        });
+    </script>
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
