--- a/pages/cinematica.html
+++ b/pages/cinematica.html
@@ -66,103 +66,333 @@
         padding-left: 15px;
         justify-content: space-between;
     }
-    .normal_anormal {
+    .sim_nao {
             width: 27%;
             background-color: #333333;
             box-shadow: 0px 0px 15px #1E90FF;
             border-radius: 5px;
             align-items: center;
             margin-right: 27px;
+            justify-content: center;
+        }
+        @media screen and (min-width: 1024px){
+            .sim_nao{
+                width: 19%;
+            }
         }
 
 </style>
 </head>
 <body>
-    <nav class="navbar navbar-dark" id="nav">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#"> <img src="../images/avatar_bombeiro.png" width="60px"></a>
-            <p class="navbar-title mt-3 fw-bold">AVALIAÇÃO DA CINEMÁTICA</p>
-            <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
-                data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
+    <!-- container geral -->
+    <div class="container-fluid p-0">
+        <!-- navbar -->
+        <nav class="navbar navbar-dark" id="nav">
+          <div class="container-fluid">
+            <a class="navbar-brand" href="#"
+              ><img src="../images/avatar_bombeiro.png" width="60px"
+            /></a>
+            <p class="navbar-title mt-3 fw-bold text">
+              ANAMNESE DA EMERGÊNCIA MÉDICA
+            </p>
+            <button
+              class="navbar-toggler"
+              type="button"
+              data-bs-toggle="offcanvas"
+              data-bs-target="#offcanvasDarkNavbar"
+              aria-controls="offcanvasDarkNavbar"
+              aria-label="Toggle navigation"
+            >
+              <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar"
-                aria-labelledby="offcanvasDarkNavbarLabel">
-                <div class="offcanvas-header">
-                    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas"
-                        aria-label="Close"></button>
-                </div>
-                <div class="offcanvas-body">
-                    <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-                        <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="#">TELA DE INÍCIO</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">CATEGORIAS</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">PERFIL</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">SAIR</a>
-                        </li>
+            <div
+              class="offcanvas offcanvas-end text-bg-dark"
+              tabindex="-1"
+              id="offcanvasDarkNavbar"
+              aria-labelledby="offcanvasDarkNavbarLabel"
+            >
+              <div class="offcanvas-header">
+                <button
+                  type="button"
+                  class="btn-close btn-close-white"
+                  data-bs-dismiss="offcanvas"
+                  aria-label="Close"
+                ></button>
+              </div>
+              <div class="offcanvas-body">
+                <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                  <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="#"
+                      >TELA DE INÍCIO</a
+                    >
+                  </li>
+  
+                  <li class="nav-item dropdown">
+                    <a
+                      class="nav-link dropdown-toggle"
+                      href="#"
+                      role="button"
+                      data-bs-toggle="dropdown"
+                      aria-expanded="false"
+                    >
+                      CATEGORIAS
+                    </a>
+                    <ul class="dropdown-menu dropdown-menu-dark">
+                      <li>
+                        <a class="dropdown-item" href="#">TIPO DE OCORRÊNCIA</a>
+                      </li>
+                      <li>
+                        <hr class="dropdown-divider" />
+                      </li>
+                      <li>
+                        <a
+                          class="dropdown-item"
+                          href="#"
+                          style="white-space: break-spaces"
+                          >PROBLEMAS ENCONTRADOS SUSPEITOS</a
+                        >
+                      </li>
+                      <li>
+                        <hr class="dropdown-divider" />
+                      </li>
+                      <li>
+                        <a class="dropdown-item" href="#">SINAIS E SINTOMAS</a>
+                      </li>
+                      <li>
+                        <hr class="dropdown-divider" />
+                      </li>
+                      <li>
+                        <a class="dropdown-item" href="#"
+                          >AVALIAÇÃO DO PACIENTE (GLASGOW)</a
+                        >
+                      </li>
+                      <li>
+                        <hr class="dropdown-divider" />
+                      </li>
+                      <li>
+                        <a class="dropdown-item" href="#"
+                          >LOCALIZAÇÃO DOS TRAUMAS</a
+                        >
+                      </li>
+                      <li>
+                        <hr class="dropdown-divider" />
+                      </li>
+                      <li><a class="dropdown-item" href="#">SINAIS VITAIS</a></li>
+                      <li>
+                        <hr class="dropdown-divider" />
+                      </li>
+                      <li>
+                        <a class="dropdown-item" href="#">OBJETOS RECOLHIDOS</a>
+                      </li>
+                      <li>
+                        <hr class="dropdown-divider" />
+                      </li>
+                      <li>
+                        <a
+                          class="dropdown-item"
+                          href="#"
+                          style="white-space: break-spaces"
+                          >FORMA DE CONDUÇÃO E DECISÃO DE TRANSPORTE</a
+                        >
+                      </li>
+                      <li>
+                        <hr class="dropdown-divider" />
+                      </li>
+                      <li><a class="dropdown-item" href="#">VÍTIMA ERA</a></li>
+                      <li>
+                        <hr class="dropdown-divider" />
+                      </li>
+                      <li>
+                        <a class="dropdown-item" href="#"
+                          >PROCEDIMENTOS EFETUADOS</a
+                        >
+                      </li>
+                      <li>
+                        <hr class="dropdown-divider" />
+                      </li>
+                      <li>
+                        <a class="dropdown-item" href="#">MATERIAIS UTILIZADOS</a>
+                      </li>
+                      <li>
+                        <hr class="dropdown-divider" />
+                      </li>
+                      <li>
+                        <a class="dropdown-item" href="#"
+                          >OBSERVAÇÕES IMPORTANTES</a
+                        >
+                      </li>
+                      <li>
+                        <hr class="dropdown-divider" />
+                      </li>
+                      <li>
+                        <a class="dropdown-item" href="#"
+                          >AVALIAÇÃO DA CINEMÁTICA</a
+                        >
+                      </li>
+                    </ul>
+                  </li>
+                  <li class="nav-item" style="list-style-type: none">
+                    <a class="nav-link" href="#">PERFIL</a>
+                  </li>
+                  <li class="nav-item" style="list-style-type: none">
+                    <a class="nav-link" href="#">SAIR</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </nav>
+    <form action="" style="height: 100vh;">
+        <div class="form-group">
+            <div class="container mt-5 d-flex justify-content-center">
+                <div class="col-10">
+                        <div class="row mt-4">
+                            DISTURBIO DE COMPORTAMENTO
+                            <div class="sim_nao d-flex pl-2">
+                                <div class="d-flex" style="gap: 10px;">
+                                    <span>SIM</span>
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="checkbox" name="group1" value="">
+                                    </div>
+                                </div>
+                                <div class="d-flex" style="gap: 10px;">
+                                    <span>NÃO</span>
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="checkbox" name="group1" value="">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row mt-4">
+                            ENCONTRADO DE CAPACETE
+                            <div class="sim_nao d-flex pl-2">
+                                <div class="d-flex" style="gap: 10px;">
+                                    <span>SIM</span>
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="checkbox" name="group2" value="">
+                                    </div>
+                                </div>
+                                <div class="d-flex" style="gap: 10px;">
+                                    <span>NÃO</span>
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="checkbox" name="group2" value="">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row mt-4">
+                            ENCONTRADO DE CINTO
+                            <div class="sim_nao d-flex pl-2">
+                                <div class="d-flex" style="gap: 10px;">
+                                    <span>SIM</span>
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="checkbox" name="group3" value="">
+                                    </div>
+                                </div>
+                                <div class="d-flex" style="gap: 10px;">
+                                    <span>NÃO</span>
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="checkbox" name="group3" value="">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row mt-4">
+                            PARA-BRISAS AVARIADO 
+                            <div class="sim_nao d-flex pl-2">
+                                <div class="d-flex" style="gap: 10px;">
+                                    <span>SIM</span>
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="checkbox" name="group4" value="">
+                                    </div>
+                                </div>
+                                <div class="d-flex" style="gap: 10px;">
+                                    <span>NÃO</span>
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="checkbox" name="group4" value="">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row mt-4">
+                            CAMINHANDO NA CENA
+                            <div class="sim_nao d-flex pl-2">
+                                <div class="d-flex" style="gap: 10px;">
+                                    <span>SIM</span>
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="checkbox" name="group5" value="">
+                                    </div>
+                                </div>
+                                <div class="d-flex" style="gap: 10px;">
+                                    <span>NÃO</span>
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="checkbox" name="group5" value="">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row mt-4">
+                            PAINEL AVARIADO 
+                            <div class="sim_nao d-flex pl-2">
+                                <div class="d-flex" style="gap: 10px;">
+                                    <span>SIM</span>
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="checkbox" name="group6" value="">
+                                    </div>
+                                </div>
+                                <div class="d-flex" style="gap: 10px;">
+                                    <span>NÃO</span>
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="checkbox" name="group6" value="">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row mt-4">
+                            VOLANTE TORCIDO
+                            <div class="sim_nao d-flex pl-2">
+                                <div class="d-flex" style="gap: 10px;">
+                                    <span>SIM</span>
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="checkbox" name="group7" value="">
+                                    </div>
+                                </div>
+                                <div class="d-flex" style="gap: 10px;">
+                                    <span>NÃO</span>
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="checkbox" name="group7" value="" >
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                 </div>
             </div>
-        </div>
-    </nav>
-    <div class="container mt-5 d-flex justify-content-center">
-        <div class="col-10">
-                <div class="row mt-4">
-                    DISTURBIO DE COMPORTAMENTO
-                </div>
-                <div class="row mt-4">
-                    ENCONTRADO DE CAPACETE
-                </div>
-                <div class="row mt-4">
-                    ENCONTRADO DE CINTO
-                </div>
-                <div class="row mt-4">
-                    PARA-BRISAS AVARIADO 
-                </div>
-                <div class="row mt-4">
-                    CAMINHANDO NA CENA
-                </div>
-                <div class="row mt-4">
-                    PAINEL AVARIADO 
-                </div>
-                <div class="row mt-4">
-                    VOLANTE TORCIDO
-                    <div class="normal_anormal d-flex pl-2">
-                        <div class="d-flex" style="gap: 10px;">
-                            <span>SIM</span>
-                            <div class="form-check">
-                                <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                            </div>
-                        </div>
-                        <div class="d-flex" style="gap: 10px;">
-                            <span>NÃO</span>
-                            <div class="form-check">
-                                <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                            </div>
-                        </div>
-                    </div>
-                </div>
-        </div>
-    </div>
-    <!-- <div class="fundo">
-        <div class="row">
-            <div class="col-6">
+        </div>    
+    </form>
 
-            </div>
-        </div>
-    </div> -->
-    <!-- <div class="espaço_botao">
+    <div class="espaço_botao">
         <div class="botao">
             <button type="button" class="btn btn-outline-primary btn-lg">Voltar</button>
             <button type="button" class="btn btn-outline-primary btn-lg">Proximo</button>
         </div>
-    </div> -->
+    </div>
+    <script>
+        const checkboxes = document.querySelectorAll('input[type="checkbox"]');
+
+        checkboxes.forEach(checkbox => {
+            checkbox.addEventListener('click', () => {
+                if (checkbox.checked) {
+                    const groupName = checkbox.getAttribute('name');
+                    checkboxes.forEach(otherCheckbox => {
+                        if (otherCheckbox !== checkbox && otherCheckbox.getAttribute('name') === groupName) {
+                            otherCheckbox.checked = false;
+                        }
+                    });
+                }
+            });
+        });
+    </script>
 
 </body>
+
 </html>
